--- a/templates/index.html
+++ b/templates/index.html
@@ -33,14 +33,16 @@
     <div id="personnages">
         {% for personnage in personnages %}
         <div class="personnage">
-            <img src="{{ personnage['image']['src'] }}" alt="{{ personnage['name'] }}">
+            <img src="{{ personnage['image'] }}" alt="{{ personnage['name'] }}">
             <div>
                 <h3>{{ personnage['name'] }}</h3>
                 <p><strong>Abilities:</strong> {{ personnage['abilities'] }}</p>
                 <p><strong>Stats:</strong></p>
                 <ul>
                     {% for key, value in personnage['stats'].items() %}
-                    <li>{{ key }}: {{ value }}</li>
+                        {% if value is not none %}
+                            <li>{{ key | capitalize }}: {{ value }}</li>
+                        {% endif %}
                     {% endfor %}
                 </ul>
             </div>
